[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Node2D.gd" type="Script" id=1]
[ext_resource path="res://Graphics/main.png" type="Texture" id=2]
[ext_resource path="res://Sound/60BPM44100.wav" type="AudioStream" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 136 ), Vector2( 160, 136 ), Vector2( 20, 136 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
}, {
"args": [  ],
"method": "play_sound"
} ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Button" type="Button" parent="."]
margin_left = 104.0
margin_top = 140.0
margin_right = 175.0
margin_bottom = 189.0
text = "CLICK ME"

[node name="bpm" type="Label" parent="."]
margin_left = -19.0
margin_top = 2.0
margin_right = 188.0
margin_bottom = 63.0
text = "BPM: 0"
align = 1
valign = 1

[node name="first_press_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="sound_event_timer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 90, 136 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "default"
anims/default = SubResource( 1 )

[node name="LoopsAt60BPM" type="Node" parent="."]

[node name="FourFour" type="AudioStreamPlayer" parent="LoopsAt60BPM"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="first_press_timer" to="." method="_on_first_press_timer_timeout"]
[connection signal="timeout" from="sound_event_timer" to="." method="_on_sound_event_timer_timeout"]
